// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Table Center A Column With Css 1`] = `
<div
  className="sc-gfarJg kYmgQC"
>
  <div
    className="sc-gfarJg kYmgQC"
  >
    <div
      className="sc-table"
      style={
        Object {
          "height": "auto",
          "overflow": "visible",
          "width": "auto",
        }
      }
    >
      <div
        className="sc-fXvjs lnhDBo"
      >
        <div
          aria-colcount={6}
          aria-rowcount={100}
          className="ReactVirtualized__Table"
          role="grid"
          style={Object {}}
        >
          <div
            className="ReactVirtualized__Table__headerRow sc-table-row"
            role="row"
            style={
              Object {
                "height": 40,
                "overflow": "hidden",
                "paddingRight": 0,
                "width": 0,
              }
            }
          >
            <div
              aria-label="Id"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 50px",
                  "flex": "0 1 50px",
                  "msFlex": "0 1 50px",
                }
              }
              tabIndex={0}
            >
              <div
                className="sc-JooDp dHiAry"
              >
                <label>
                  Id
                </label>
                <div
                  className="sc-gGTGfU gXAouC"
                  selected={false}
                >
                  <i
                    className="fas fa-sort-up"
                  />
                  <i
                    className="fas fa-sort-down"
                  />
                </div>
              </div>
            </div>
            <div
              aria-label="First Name"
              aria-sort="ascending"
              className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 150px",
                  "flex": "0 1 150px",
                  "msFlex": "0 1 150px",
                }
              }
              tabIndex={0}
            >
              <div
                className="sc-JooDp dHiAry"
              >
                <label>
                  First Name
                </label>
                <div
                  className="sc-gGTGfU jMBvvY"
                  selected={true}
                >
                  <i
                    className="fas fa-sort-up"
                  />
                  <i
                    className="fas fa-sort-down"
                  />
                </div>
              </div>
            </div>
            <div
              aria-label="Last Name"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 150px",
                  "flex": "0 1 150px",
                  "msFlex": "0 1 150px",
                }
              }
              tabIndex={0}
            >
              <div
                className="sc-JooDp dHiAry"
              >
                <label>
                  Last Name
                </label>
                <div
                  className="sc-gGTGfU gXAouC"
                  selected={false}
                >
                  <i
                    className="fas fa-sort-up"
                  />
                  <i
                    className="fas fa-sort-down"
                  />
                </div>
              </div>
            </div>
            <div
              className="ReactVirtualized__Table__headerColumn sc-table-header"
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "1 1 200px",
                  "flex": "1 1 200px",
                  "msFlex": "1 1 200px",
                }
              }
            >
              <div
                className="sc-JooDp dHiAry"
              >
                <label>
                  Email
                </label>
              </div>
            </div>
            <div
              className="ReactVirtualized__Table__headerColumn sc-table-header"
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 150px",
                  "flex": "0 1 150px",
                  "msFlex": "0 1 150px",
                }
              }
            >
              <div
                className="sc-JooDp dHiAry"
              >
                <label>
                  Ip Address
                </label>
              </div>
            </div>
            <div
              aria-label="Age"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 50px",
                  "flex": "0 1 50px",
                  "msFlex": "0 1 50px",
                }
              }
              tabIndex={0}
            >
              <div
                className="sc-JooDp dHiAry"
              >
                <label>
                  Age
                </label>
                <div
                  className="sc-gGTGfU gXAouC"
                  selected={false}
                >
                  <i
                    className="fas fa-sort-up"
                  />
                  <i
                    className="fas fa-sort-down"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            aria-label="grid"
            aria-readonly={null}
            className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
            onScroll={[Function]}
            role="rowgroup"
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "boxSizing": "border-box",
                "direction": "ltr",
                "height": -40,
                "overflowX": "hidden",
                "overflowY": "auto",
                "position": "relative",
                "width": 0,
                "willChange": "transform",
              }
            }
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Table Change Column Size 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <div
    className="sc-table"
    style={
      Object {
        "height": "auto",
        "overflow": "visible",
        "width": "auto",
      }
    }
  >
    <div
      className="sc-fXvjs lnhDBo"
    >
      <div
        aria-colcount={6}
        aria-rowcount={100}
        className="ReactVirtualized__Table"
        role="grid"
        style={Object {}}
      >
        <div
          className="ReactVirtualized__Table__headerRow sc-table-row"
          role="row"
          style={
            Object {
              "height": 40,
              "overflow": "hidden",
              "paddingRight": 0,
              "width": 0,
            }
          }
        >
          <div
            aria-label="Id"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 50px",
                "flex": "0 1 50px",
                "msFlex": "0 1 50px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Id
              </label>
              <div
                className="sc-gGTGfU gXAouC"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            aria-label="First Name"
            aria-sort="ascending"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 150px",
                "flex": "0 1 150px",
                "msFlex": "0 1 150px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                First Name
              </label>
              <div
                className="sc-gGTGfU jMBvvY"
                selected={true}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            aria-label="Last Name"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 150px",
                "flex": "0 1 150px",
                "msFlex": "0 1 150px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Last Name
              </label>
              <div
                className="sc-gGTGfU gXAouC"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn sc-table-header"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "1 1 200px",
                "flex": "1 1 200px",
                "msFlex": "1 1 200px",
              }
            }
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Email
              </label>
            </div>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn sc-table-header"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 150px",
                "flex": "0 1 150px",
                "msFlex": "0 1 150px",
              }
            }
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Ip Address
              </label>
            </div>
          </div>
          <div
            aria-label="Age"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 50px",
                "flex": "0 1 50px",
                "msFlex": "0 1 50px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Age
              </label>
              <div
                className="sc-gGTGfU gXAouC"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly={null}
          className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          onScroll={[Function]}
          role="rowgroup"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": -40,
              "overflowX": "hidden",
              "overflowY": "auto",
              "position": "relative",
              "width": 0,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Table Default 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <div
    className="sc-table"
    style={
      Object {
        "height": "auto",
        "overflow": "visible",
        "width": "auto",
      }
    }
  >
    <div
      className="sc-fXvjs lnhDBo"
    >
      <div
        aria-colcount={6}
        aria-rowcount={100}
        className="ReactVirtualized__Table"
        role="grid"
        style={Object {}}
      >
        <div
          className="ReactVirtualized__Table__headerRow sc-table-row"
          role="row"
          style={
            Object {
              "height": 40,
              "overflow": "hidden",
              "paddingRight": 0,
              "width": 0,
            }
          }
        >
          <div
            aria-label="Id"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Id
              </label>
              <div
                className="sc-gGTGfU gXAouC"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            aria-label="First Name"
            aria-sort="ascending"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                First Name
              </label>
              <div
                className="sc-gGTGfU jMBvvY"
                selected={true}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            aria-label="Last Name"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Last Name
              </label>
              <div
                className="sc-gGTGfU gXAouC"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn sc-table-header"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Email
              </label>
            </div>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn sc-table-header"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Ip Address
              </label>
            </div>
          </div>
          <div
            aria-label="Age"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "1 1 200px",
                "flex": "1 1 200px",
                "msFlex": "1 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Age
              </label>
              <div
                className="sc-gGTGfU gXAouC"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly={null}
          className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          onScroll={[Function]}
          role="rowgroup"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": -40,
              "overflowX": "hidden",
              "overflowY": "auto",
              "position": "relative",
              "width": 0,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Table Empty Table 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <div
    className="sc-table"
    style={
      Object {
        "height": "auto",
        "overflow": "visible",
        "width": "auto",
      }
    }
  >
    <div
      className="sc-fXvjs lnhDBo"
    >
      <div
        aria-colcount={6}
        aria-rowcount={0}
        className="ReactVirtualized__Table"
        role="grid"
        style={Object {}}
      >
        <div
          className="ReactVirtualized__Table__headerRow sc-table-row"
          role="row"
          style={
            Object {
              "height": 40,
              "overflow": "hidden",
              "paddingRight": 0,
              "width": 0,
            }
          }
        >
          <div
            aria-label="Id"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Id
              </label>
              <div
                className="sc-gGTGfU gXAouC"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            aria-label="First Name"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                First Name
              </label>
              <div
                className="sc-gGTGfU gXAouC"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            aria-label="Last Name"
            aria-sort="descending"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Last Name
              </label>
              <div
                className="sc-gGTGfU dxZYCw"
                selected={true}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn sc-table-header"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Email
              </label>
            </div>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn sc-table-header"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Ip Address
              </label>
            </div>
          </div>
          <div
            aria-label="Age"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "1 1 200px",
                "flex": "1 1 200px",
                "msFlex": "1 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Age
              </label>
              <div
                className="sc-gGTGfU gXAouC"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly={null}
          className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          onScroll={[Function]}
          role="rowgroup"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": -40,
              "overflowX": "hidden",
              "overflowY": "auto",
              "position": "relative",
              "width": 0,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Table With Row Actions 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <div
    className="sc-table"
    style={
      Object {
        "height": "auto",
        "overflow": "visible",
        "width": "auto",
      }
    }
  >
    <div
      className="sc-fXvjs lnhDBo"
    >
      <div
        aria-colcount={6}
        aria-rowcount={100}
        className="ReactVirtualized__Table"
        role="grid"
        style={Object {}}
      >
        <div
          className="ReactVirtualized__Table__headerRow sc-table-row"
          role="row"
          style={
            Object {
              "height": 40,
              "overflow": "hidden",
              "paddingRight": 0,
              "width": 0,
            }
          }
        >
          <div
            aria-label="Id"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Id
              </label>
              <div
                className="sc-gGTGfU gXAouC"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            aria-label="First Name"
            aria-sort="ascending"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                First Name
              </label>
              <div
                className="sc-gGTGfU jMBvvY"
                selected={true}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            aria-label="Last Name"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Last Name
              </label>
              <div
                className="sc-gGTGfU gXAouC"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn sc-table-header"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Email
              </label>
            </div>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn sc-table-header"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Ip Address
              </label>
            </div>
          </div>
          <div
            aria-label="Age"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "1 1 200px",
                "flex": "1 1 200px",
                "msFlex": "1 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-JooDp dHiAry"
            >
              <label>
                Age
              </label>
              <div
                className="sc-gGTGfU gXAouC"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly={null}
          className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          onScroll={[Function]}
          role="rowgroup"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": -40,
              "overflowX": "hidden",
              "overflowY": "auto",
              "position": "relative",
              "width": 0,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>
</div>
`;
